# PCS

esercitazione1/: IA.txt  medieT  medieT.cpp  print_args.cpp
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  esercitazione1_esercizio
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  test_gc.cpp
esercitazione2/: CMakeLists.txt  algo.cpp  es_array.cpp  osservazioni.txt
esercitazione3/: CMakeLists.txt  rational.cpp  rational.hpp
esercitazione4/: bubblesort.hpp  insertionsort.hpp  measure_sorts.cpp  selectionsort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: bubblesort.hpp  commento.txt  measure_sorts.cpp  merge.hpp  mergesort.hpp  partizione.hpp  quicksort.hpp  selectionsort.hpp  sorted.hpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione8/: CMakeLists.txt  test_add.cpp  test_at.cpp  test_diff.cpp  test_edges.cpp  test_neigh.cpp  test_nodes.cpp  test_numb.cpp  unidirected_edge.hpp  unidirected_graph.hpp
esercitazione9/: CMakeLists.txt  dijkstra.hpp  fifo.hpp  graph_visit.hpp  lifo.hpp  prova.cpp  recursive_dfs.hpp  unidirected_graph.hpp
progetto/: CMakeLists.txt  de_pina.hpp  dfs.hpp  dijkstra.hpp  gradiente_coniugato.hpp  lifo.hpp  main.cpp  read_netlist.hpp  sistema_lineare.hpp  unidirected_edge.hpp  weighted_graph.hpp
